[gd_scene load_steps=3 format=3 uid="uid://dj5w2fj5756kr"]

[ext_resource type="Script" uid="uid://d0lyllvgjckpi" path="res://game-objects/network/net-lane/net_lane.gd" id="1_1nvuj"]

[sub_resource type="Curve2D" id="Curve2D_csds3"]

[node name="NetLane" type="Node2D"]
script = ExtResource("1_1nvuj")

[node name="PathingTrail" type="Path2D" parent="."]
curve = SubResource("Curve2D_csds3")

[node name="DebugLayer" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="UsageIndicator" type="Line2D" parent="."]
visible = false
width = 16.0
default_color = Color(1, 0.518123, 0.45217, 1)

[node name="UsageTimer" type="Timer" parent="."]
